# tiktok-sound-music-api-free-watermark-videos

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: input.post_list.example.json  input.search.example.json  sample_output.json
src/: cli.py  main.py
src/client/: init.py  tiktok_sound_client.py
src/config/: schema.json  settings.example.json
src/models/: sound_item.py  video_item.py
src/pipelines/: sound_post_list.py  sound_search.py
src/utils/: http.py  logging_utils.py  rate_limiter.py
tests/: test_sound_post_list.py  test_sound_search.py
